--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,20 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v3
-      - name: Install, build, and upload your site
-        uses: withastro/action@v1
-
+      - name: Uses Node 18
+        uses: actions/setup-node@v2
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: yarn
+      - name: Install Sharp
+        run: yarn add sharp --ignore-engines
+      - name: Build the site
+        run: yarn build
+      - name: Upload Artifact
+        uses: actions/upload-pages-artifact@v2.0.0
+        with:
+          path: ./dist
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -28,4 +39,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v1
+        uses: actions/deploy-pages@v3
